--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Bonjour, bienvenue sur BookMe !</h1>
+<h2>Que veux-tu faire aujourd'hui ?</h2>
+<%= link_to "Ajouter un livre", new_book_path %>
+<%= link_to "Accéder aux livres", books_path %>
