--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,8 +2,12 @@
 <ul>
   <% @books.each do |book| %>
   <li>
-    <h2><%= book.title %></h2>
-    <%= link_to "voir les détails", book_path(book) %>
+    <% raise %>
+    <% book.photo.each do |photo| %>
+      <%= cl_image_tag @book.photo.key, height: 300, width: 400, crop: :fill %>
+    <% end %>
+       <h2><%= book.title %></h2>
+      <%= link_to "voir les détails", book_path(book) %>
   </li>
   <% end %>
 </ul>
