--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,20 @@
 // Import page-specific CSS files here.
 @import "home";
+
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+/* Ajoutez ce style pour centrer horizontalement les éléments de la liste */
+.book-list {
+  padding: 0;
+  list-style: none;
+}
+
+.book-list li {
+  margin-bottom: 20px;
+}
