--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,25 @@
-<h1>Voici les livres que nous avons en bibliothèque :</h1>
-<ul>
-  <% @books.each do |book| %>
-    <li>
-      <%= cl_image_tag book.photo.key, height: 300, width: 400, crop: :fill %>
-      <p><%= book.title %></p>
-      <%= link_to "voir les détails", book_path(book) %>
-    </li>
-  <% end %>
-</ul>
-<%= link_to "Ajouter un livre", new_book_path %>
+<div class="container">
+  <h1>Voici les livres que nous avons en bibliothèque :</h1>
+  <ul class="book-list">
+    <% @books.each do |book| %>
+      <li>
+        <% if book.photo.present? %>
+          <%= cl_image_tag book.photo.key, height: 300, width: 400, crop: :fill %>
+        <% else %>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy0ZTmzf0Lt21OSCfwXgzenELYc9OvSsbOWw&usqp=CAU" alt="Image par défaut">
+        <% end %>
+        <p><%= book.title %></p>
+        <%= link_to "voir les détails", book_path(book), class: "button" %>
+      </li>
+    <% end %>
+  </ul>
+  <%= link_to "Ajouter un livre", new_book_path, class: "button" %>
+</div>
 
+ <%# <% @books.each do |new_book| %>
+  <%# <div> %>
+    <%# <p><strong><%= new_book.title</strong></p>  %>
+    <%# <p>Auteur : <%= new_book.author</p>  %>
+    <%# <p>Description : <%= new_book.description</p>  %>
+  <%# </div> %>
+<%# <% end %>
